<resources>
    <string name="app_name">Walking Alarm</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="place_holder_alarm_name">Place Holder Alarm</string>
    <string name="select_alarm_sound">Select Alarm Sound</string>
    <string name="alarm_steps_remaining">Steps Remaining To Dismiss: %1$d</string>
    <string name="alarm_full_screen_loading">Retrieving Steps from Google Fit…</string>
    <string name="alarm_dismissed_toast">Walking Alarm Dismissed</string>
    <string name="alarm_notification_text">Alarm - %1$s </string>
    <string name="alarm_notification_subtext">Walk %1$d Steps, Tap for Progress</string>

    <string name="shared_prefs_key">com.example.walkingalarm.preferences</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">TH</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="title_activity_alarm_full_screen">Alarm Dismiss Screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="go_to_permission_settings">Go to Settings</string>
    <string name="cancel_dialog">Cancel</string>
    <!-- Error Messages -->
    <string name="could_not_find_account_error">Error: Could not find Google Fit Account,
        please restart app</string>
    <string name="could_not_find_steps_error">Error: Could not find current steps,
        alarm will be dismissed</string>
    <string name="duplicate_alarm_time_error">Error: Alarm already exists at this time </string>
    <string name="no_steps_found_after_time">Error: Could not find change in steps,
        dismissing Alarm</string>
    <string name="alarm_not_dismissed_in_time">Error: Steps not walked within allotted time,
        dismissing alarm</string>
    <string name="no_notification_permissions">Error: Walking Alarm requires Notification
        permissions and Activity Tracking to function</string>

    <!-- Preference Titles -->
    <string name="settings_header">General</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Alarm Preferences -->
    <string name="steps_to_dismiss_pref_title">Number of Steps to Dismiss Alarm (minimum 5 steps)</string>
    <string name="dark_mode_pref_title">Enable Dark Theme</string>
    <string name="vibration_setting_title">Vibrate on Alarm</string>
    <string name="max_secs_to_wait_setting_title">Seconds to Wait for at Least One Step (minimum 15 seconds)</string>





</resources>