<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_header">

        <EditTextPreference
            app:defaultValue="5"
            app:key="number_of_steps_setting_key"
            app:title="@string/steps_to_dismiss_pref_title"
            app:useSimpleSummaryProvider="true"
            />

        <EditTextPreference
            app:defaultValue="15"
            app:key="max_secs_to_wait_key"
            app:title="@string/max_secs_to_wait_setting_title"
            app:useSimpleSummaryProvider="true"
            />

        <SwitchPreference
            app:defaultValue="false"
            app:key="dark_mode_setting_key"
            app:title="@string/dark_mode_pref_title"
            app:useSimpleSummaryProvider="true" />


        <SwitchPreference
            app:defaultValue="false"
            app:key="vibration_setting_key"
            app:title="@string/vibration_setting_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>



</PreferenceScreen>